--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>This is a demo repository for Git hands-on session</h1>
     <h2>Prashant Sharma</h2>
+    <p>radical</p>
 </body>
 </html>
